deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: emplist
  name: emplist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emplist
  template:
    metadata:
      labels:
        app: emplist
    spec:
      containers:
              - image: mounika0702/employeelist:v1
          name: emplist
