deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: emplist
  name: emplist
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: emplist
  type: NodePort
