deploy/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serviceb-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: emplist.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emplist
                port:
                  number: 8081
